--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr Saurab Sharma"
-  avatar           : "Saurab Sharma headshot.jpg"
+  avatar           : "Saurab Sharma - Headshot.jpg"
   bio              : "Postdoctoral Research Fellow researching pain"
   location         : "Neuroscience Research Australia"
   employer         :
